--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             
 
             <div class="card-body">
-              <p class="card-text">啊哈 啊哈 阿哈雷路亞</p>
+              <p class="card-text">龍騰斷橋</p>
               <img src="1.jpg" width="100%" height="100%" fill="#55595c"></img>
               <p>
                 苗栗的各處美景
