--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <p class="card-text">相聲瓦舍</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button href="https://www.ngng.com.tw/" class="btn btn-sm btn-outline-secondary">前往官網</button>
+                  <a href="https://www.ngng.com.tw/" class="btn btn-sm btn-outline-secondary">前往官網</a>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
                 <small class="text-muted">9 mins</small>
