--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <p class="card-text">張飛要出來了，別害怕!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a type="https://www.youtube.com/watch?v=hdEU1y7u74c&t=3708s" class="btn btn-sm btn-outline-secondary">View</a>
+                  <a ="https://www.youtube.com/watch?v=hdEU1y7u74c&t=3708s" class="btn btn-sm btn-outline-secondary">看相聲</a>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
                 <small class="text-muted">9 mins</small>
