--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p class="lead text-muted">我們統整了一些苗栗的特色或觀光景點，讓大家透過這些影像提升對於苗栗的好奇，藉此讓大家更認識苗栗！擔心坐車？擔心住宿？沒問題，點擊“心動不如馬上行動”來了解更多！</p><!--網站介紹-->
         <p>
           <a href="https://www.mlc.gov.tw/" target="_blank" class="btn btn-primary my-2" input type="button" style="width:180px;height:40px " >了解更多</a><!--按鈕1-->
-          <a href="../心動不如馬上行動/index.html" class="btn btn-secondary my-2" input type="button" style="width:180px;height:40px ">心動不如馬上行動</a><!--按鈕2-->
+          <a href="https://lizheng-hao.github.io/maioli.github.io/" class="btn btn-secondary my-2" input type="button" style="width:180px;height:40px ">心動不如馬上行動</a><!--按鈕2-->
         </p>
       </div>
     </div>
