--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <h4 class="text-info"><!--顏色--><strong>苗栗</strong></h4><!--上橫選單標題1-->
           <p class="text-white"><!--顏色-->
             <strong>苗栗在道卡斯族語稱「Bari」渡海來台的漢人稱之為「貓狸」山貓之意，後為取其音雅而改稱「苗栗」。<br>
+		    苗縣領域範圍雖然方整適中，但由於地勢崎嶇多山地阻隔，交通便道受限，使交流多以村里層級互動，不易擴大為以整個鄉鎮為單位，在經濟發展上有諸多困難和挑戰。<br>
             </strong></p>
           <!--上橫選單內容1-->
         </div>
