--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     
   </head>
   <body style="background-color:rgb(228, 233, 237)"><!--背景顏色-->
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDW9V6PN"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <header>
   <div class="collapse bg-light" id="navbarHeader">
